--- a/lss.yml
+++ b/lss.yml
@@ -11,5 +11,5 @@ logger:
 mysql:
   conn: root:root@tcp(59.56.77.186:3306)/test?charset=utf8&parseTime=True&loc=Local
 mongo:
-  conn: mongodb://root:123456@59.56.77.186:27017
+  conn: mongodb://admin:123456@59.56.77.186:27017
   db: test
